--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
     <artifactId>ci-droid-tasks-consumer-parent</artifactId>
     <name>ci-droid-tasks-consumer Service</name>
 
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <packaging>pom</packaging>
 
@@ -85,7 +84,7 @@
         <url>https://github.com/societe-generale/ci-droid-tasks-consumer</url>
         <connection>scm:git:git@github.com:societe-generale/ci-droid-tasks-consumer.git</connection>
         <developerConnection>scm:git:git@github.com:societe-generale/ci-droid-tasks-consumer.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>cidroid-tasks-consumer_1.1.0</tag>
     </scm>
 
     <distributionManagement>
@@ -284,7 +283,7 @@
                 <version>1.4.1</version>
                 <configuration>
                     <rules>
-                        <dependencyConvergence/>
+                        <dependencyConvergence />
                     </rules>
                     <fail>false</fail>
                 </configuration>
