--- a/ci-droid-tasks-consumer-autoconfigure/pom.xml
+++ b/ci-droid-tasks-consumer-autoconfigure/pom.xml
@@ -31,6 +31,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- for conditional logging with logback -->
         <dependency>
             <groupId>org.codehaus.janino</groupId>
