--- a/ci-droid-tasks-consumer-autoconfigure/pom.xml
+++ b/ci-droid-tasks-consumer-autoconfigure/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- for conditional logging with logback -->
         <dependency>
             <groupId>org.codehaus.janino</groupId>
