--- a/ci-droid-tasks-consumer-autoconfigure/pom.xml
+++ b/ci-droid-tasks-consumer-autoconfigure/pom.xml
@@ -31,11 +31,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <!-- both required to get an HTTP healthcheck -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
