--- a/ci-droid-tasks-consumer-starter/pom.xml
+++ b/ci-droid-tasks-consumer-starter/pom.xml
@@ -50,6 +50,7 @@
 
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.3.RELEASE</version>
                 <configuration>
                     <mainClass>com.societegenerale.cidroid.tasks.consumer.autoconfigure.CiDroidTasksConsumerApplication</mainClass>
                     <classifier>exec</classifier>
