--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,18 @@
     </licenses>
 
     <repositories>
-
         <repository>
             <id>Spring milestones</id>
             <url>https://repo.spring.io/milestone/</url>
         </repository>
-
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Spring milestones</id>
+            <url>https://repo.spring.io/milestone/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <issueManagement>
         <url>https://github.com/societe-generale/ci-droid-tasks-consumer/issues</url>
@@ -73,7 +78,6 @@
 
         <jacoco.version>0.8.2</jacoco.version>
         <guava.version>27.0-jre</guava.version>
-        <junit5.version>5.4.1</junit5.version>
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.9</ci-droid-extensions.version>
@@ -101,9 +105,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.2.0.M1</version>
     </parent>
-
 
     <modules>
         <module>ci-droid-tasks-consumer-services</module>
@@ -142,19 +145,6 @@
             </dependency>
 
             <!-- Test -->
-
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${junit5.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit5.version}</version>
-                <scope>test</scope>
-            </dependency>
 
             <dependency>
                 <groupId>com.jayway.awaitility</groupId>
