--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -69,14 +69,14 @@ cidroid-behavior:
     limitInDays: 180
 #  whenPullRequestEvent:
   bestPracticeNotifier.enabled: true
-  maxFilesInPRNotifier.enabled: true
   patternToResourceMapping:
 # example of associating a document with a file pattern
     "**/*Dto.java": "https://some_link_to_some_best_practices_repo/noDtoClass.md"
-    maxFilesInPr: 10
-    maxFilesInPRExceededWarningMessage: "The PR should not have more than {0} files"
 
-
+  maxFilesInPRNotifier:
+      enabled: true
+      maxFiles: 10
+      warningMessage: "The PR should not have more than {0} files"
 
 logging:
   level:
