--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -23,8 +23,10 @@ cidroid-behavior:
     limitInDays: 180
 # whenPullRequestEvent:
   bestPracticeNotifier.enabled: true
-  maxFilesInPRNotifier.enabled: true
   patternToResourceMapping:
     "**/*Dto.java": "https://someLinkToSomeResource/ci-droid-best-practices/noDtoClass.md"
-    maxFilesInPr: 10
-    maxFilesInPRExceededWarningMessage: "The PR should not have more than {0} files"
+
+  maxFilesInPRNotifier:
+    enabled: true
+    maxFiles: 5
+    warningMessage: "Oops! The your PR has more than {0} files. It's going to be tough for the reviewer :( . Limit the number of files in your PR."
