--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 
     <repositories>
         <repository>
+            <id>maven central</id>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+
+        <repository>
             <id>Spring milestones</id>
             <url>https://repo.spring.io/milestone/</url>
         </repository>
@@ -60,7 +65,7 @@
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
 
         <lombok.version>1.18.4</lombok.version>
-        <mockito.version>2.15.0</mockito.version>
+        <mockito.version>3.0.0</mockito.version>
         <assertj.version>3.9.1</assertj.version>
         <commons-io.version>2.6</commons-io.version>
         <ant-style-path-matcher.version>1.0.0</ant-style-path-matcher.version>
@@ -105,7 +110,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.M1</version>
+        <version>2.2.0.M4</version>
     </parent>
 
     <modules>
