--- a/ci-droid-tasks-consumer-autoconfigure/pom.xml
+++ b/ci-droid-tasks-consumer-autoconfigure/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ci-droid-tasks-consumer-autoconfigure</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <name>CI droid tasks consumer autoconfigure</name>
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
         <artifactId>ci-droid-tasks-consumer-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
 
