--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
     </repositories>
 
     <pluginRepositories>
+
+        <pluginRepository>
+            <id>maven central</id>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </pluginRepository>
+
         <pluginRepository>
             <id>Spring milestones</id>
             <url>https://repo.spring.io/milestone/</url>
