--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,10 @@
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>junit-vintage-engine</artifactId>
+                    <groupId>org.junit.vintage</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
