--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -435,7 +442,7 @@
             <plugin>
                 <groupId>com.societegenerale.commons</groupId>
                 <artifactId>arch-unit-maven-plugin</artifactId>
-                <version>2.3.0</version>
+                <version>2.4.0</version>
                 <configuration>
                     <projectPath>${project.basedir}/target</projectPath>
                     <rules>
@@ -446,6 +453,7 @@
                             <rule>com.societegenerale.commons.plugin.rules.NoJavaUtilDateRuleTest</rule>
                             <rule>com.societegenerale.commons.plugin.rules.NoPowerMockRuleTest</rule>
                             <rule>com.societegenerale.commons.plugin.rules.NoPrefixForInterfacesRuleTest</rule>
+                            <rule>com.societegenerale.commons.plugin.rules.DontReturnNullCollectionTest</rule>
 
                             <rule>com.societegenerale.commons.plugin.rules.NoInjectedFieldTest</rule>
                             <rule>com.societegenerale.commons.plugin.rules.NoAutowiredFieldTest</rule>
